<resources>
    <string name="app_name">PyTutor</string>
    <string name="subtitle">Learn Python</string>
    <string name="start">Select a Lesson</string>
    <string name="points">Points</string>
    <string name="scoreVal">0</string>
    <string name="score">Score:</string>
    <string name="bronze">Bronze: 50 points</string>
    <string name="silver">Silver: 500 points</string>
    <string name="gold">Gold: 5000 points</string>
    <string name="back">Back to menu</string>
    <string name="lessonSelect">Lesson Select</string>
    <string name="lesson1">Syntax Pt.1</string>
    <string name="lesson2">Syntax Pt.2</string>
    <string name="lesson3">Strings</string>
    <string name="lesson4">Lists</string>
    <string name="lesson5">Tuples</string>
    <string name="lesson6">Loops</string>
    <string name="lesson7">Classes</string>
    <string name="lesson8">Functions</string>
    <string name="skip">Skip to quiz</string>
    <string name="next">Next page</string>
    <string name="backLessons">Back to list</string>
    <string name="startLessons">Start Quiz</string>
    <string name="syntax1">Syntax Pt.1</string>
    <string name="syntax1Page1"> \nVariables are created when they are assigned a value. The variable type does not need to be stated when creating a variable\n\nExample:\n\nx = 1\ny = \"Hello World\"\n\nFor strings, such as the “Hello World” example, you can use double or single quotes. So \"Hello World\" and \'Hello World\' both work to give the same value.\n\nVariable names must start with either a letter or an underscore. NOT a number.\nNames may contain a number AFTER the first character.\nNames are case sensitive. So name, Name, and nAMe are all considered different variable names.\n\nExample:\n\n_x, VariableName, Variable2\n\nYou can assign values to multiple variables at once\n\nx, y, z = 1, 2, 3 will assign 1 to x, 2 to y, and 3 to z\n\nx, y, z = 1 will assign the value 1 to each of the variables, x, y, and z</string>
    <string name="syntax1Page2">Reserved Words:\nSome words in Python are \"reserved\" meaning that they cannot be used to name a variable.\nThese reserved words use only lowercase letters. Examples of reserved words are \'if\', \'break\', \'class\', and \'for\'\nThere are many other reserved words in Python.\n\nPrint:\nThe Print command will output either variables or values. Print is called by typing the word print, followed by parentheses.\n\nExample:\n\nprint(\"Hello World\")\n\nThis example will print the phrase Hello World, with no quotation marks. Alternatively, you can print a number directly such as print(5), which will output the number 5.\n\nFinally, you can use print with a variable to print the value of the variable.\n\nExample:\n\nx = 5 \ny = \"Hello\"\nprint(x)\nprint(y)\n\nThis example will output the value 5 on one line, and the word Hello on the second line.</string>
    <string name="syntax2">Syntax Pt.2</string>
    <string name="syntax2Page1">Indentation matters!. The amount of spaces or tabs is used to denote different blocks of code.\n\nExample:\n\nif 5 > 2:\n\tprint(\'Five is greater than two!\')\nprint(\"Hello World\")\n\nIn this example, the \"Hello World\" will print despite the veracity of the if statement.\nAn individual block of code must have the same number of spaces for each line. A different amount indicates it is part of a different block.\n\nComments are used to make notes about code, without actually being a part of the code, or affecting it in any way. Comments are important, as they allow other people who look at your code to understand the intent of each block.\nComments are created by starting with a #. After the # the rest of the line will be a comment\n\nExample:\n\nx = \"This is not a comment\"\n# This line is a comment\nprint(x)\n\nIn the above example, the middle line is a comment, so the compiler will ignore it and it will not affect the code.</string>
    <string name="syntax2Page2">Multi-Line Statements:\n\nNormally Python statements end with the start of a new line. However, it is possible to make one statement take place over multiple lines. This is done by using the line continuation character, \\, at the end of one line.\n\nExample:\n\nx = 5 + \\\n6 + \\\n7\n\nThe above example will set the value of x so that it is the summation of the values on the three lines. So x will equal 5 + 6 + 7, or 18.</string>
    <string name="strings">Strings</string>
    <string name="stringsPage1">Strings are values wrapped in either single or double quotations, usually used to hold the values of longer sets of characters. \'He\', \"llo Wor\", \"113_\" are three sets of viable strings.\nNote that they can hold letters, numbers, or other characters.\n\nMoreover, single and double quotes can be used, as long as the same type is used on a single string.\n\nStrings can also be assigned to variables.\n\nExample:\n\nx = \"Testing\"\n\nThe above will set the value of x to \"Testing\" without the quotation marks\n\nMultiLine Strings:\nStrings can be entered through the use of multiple lines. This is done by surrounding the string with three sets of quotation marks\n\nExample:\n\n\"\"\"This\nis my\nexample\"\"\"\n\nThese can also be single or double quotation marks, but it must be surrounded by three sets</string>
    <string name="stringsPage2">Strings are treated like arrays, meaning individual characters in the string can be called as a value in an array would be.\n\nExample:\n\na = \"Testing\"\nprint(a[2])\n\nThis example would print the value at the 2 spot, or \"s\"\n\nSlicing and indexing:\nA specific portion of a string can be returned by treating it like an array. However, instead of putting one number inside the brackets of the array, two numbers will be needed, separated by a colon.\n\nExample:\n\nx = \"testing\"\nprint(x[2:5])\n\nThis example will output the values from the two spot up to but not including the five spot, or \"sti\"\nTo index starting from the end of the string, use negative numbers\n\nExample:\n\nx = \"Testing\"\nprint(x[-5:-2])\n\nThis example would print \"esti\"</string>
    <string name="stringsPage3">String Methods:\nYou can get the length of a string using the len() method, with the string inside the parentheses.\n\nExample:\n\nx = \"Testing\"\ny = len(x)\n\nThis would set the value of y to the number of characters in x, which is 7\n\nThe lower() method will change all of the characters to lowercase letters, while the upper() method will change all the characters to uppercase letters. Unlike length, these methods will not use a string as a parameter, but are called in relation to a string.\n\nExample:\n\nx = \"testing\"\nprint(x.upper())\n\nThis example will output \"TESTING\" with all capitals.</string>
    <string name="stringsPage4">The next method is the replace(). This method will take the first parameter, and replace all instances of that parameter in the string with the second parameter. The parameters ARE case sensitive.\n\nExample:\n\nx = \"Testing\"\nx.replace(\"T\", \"R\")\nprint(x)\n\nThis will return \"Resting\". Notice that only the uppercase \"T\" got replaced, due to case sensitivity.\n\nConcatenating strings:\nStrings can be combined, or \"Concatenated\" by using a plus sign in between the two strings you wish to concatenate. However, this will only work with two string types. You can not, for example, combine a string and an integer type.\n\nExamples:\n\nx = \"testing\"\nz = x + \"S\"\n\nThis example will set the value of z to \"testingS\"</string>
    <string name="lists">Lists</string>
    <string name="listsPage1">Lists, along with tuples (See Tuples Lesson), store multiple items within one variable. This makes it easier to hold and manipulate larger clusters of data.\nTo create a list, declare a variable, but instead of a single value, use brackets to enclose multiple items separated by commas.\n\nExample:\n\nmyList = [\"First\", \"Second\", \"Third\"]\nprint(myList)\n\nThis example will output the following: [\'First\', \'Second\', \'Third\']\nAs seen, printing the list allows for multiple data points to be outputted at once, which is much more efficient than printing each individual item.\n\nLists are ordered, meaning each item in the list has a place associated with it, based on where it is in the list. Like other programming languages, the first item in the list will be denoted 0, with the second one being denoted 1, and so on. These individual items can be called by using brackets after the list name.\n\nExample:\n\nmyList = [\"First\", \"Second\", \"Third\"]\nprint(myList[2])\n\nThis will display the value at the two place, the third item in the list \'Third\'.</string>
    <string name="listsPage2">Lists do not have to hold strings, they can hold any data type. Moreover, data types can be mixed within a single list.\nExample:\n\nmyList = [1, 2, 3, 4, 5]\nx = [1.2, \"Hello\", 3, 4, \"VeryNice\"]\n\nBoth of these are valid lists, one holding only integers, with the other holding integers, floating point numbers, and strings.\nLists can also be modified after they are created. The first modification is the append method. This is used to add items to the end of the list. It is called by a list, and features the added value as a parameter.\nExample:\n\nx = [1, 2, 3, 4, 5]\nx.append(6)\n\nThis example will change the list x so it contains [1, 2, 3, 4, 5, 6].\nThe next way to modify lists is with the insert method. This inserts a value into a specific part of a list. Similar to append, it is called by a list, but features two parameters, the location to insert into, and the item to insert.\nExample:\n\nx = [1, 2, 3, 4, 5]\nx.insert(3,\'y\')\n\nThis will change list x to hold [1, 2, 3, \'y\', 4, 5] as y has been placed into the 3 slot in the list, which is the fourth item.</string>
    <string name="listsPage3">There are two ways to remove items from the list. The del command can be used to remove an item at a specific location, while the remove method can remove a specific item from the list.\n\nExample:\n\nx = [1, 2, 3, 4, 5, 6, 7, 8]\ndel x[0]\nx.remove(4)\n\nThis example works in two parts. The del command removes the value at the 0 position, or the first item in the list. Then, the remove method removes instances of 4 in the list. So the final list contains: [2, 3, 5, 6, 7, 8]\n\nTo get the length of a list, simply use the len method. This method takes the list as a parameter, and returns the total number of items in the list.\n\nExample:\n\nmyList = [1, 2, 3, 4, 5, 6, 7, 8, 0]\nprint(len(myList))\n\nThis example will print the total number of items in \'myList\', which is 9 items.</string>
    <string name="tuplesPage1">Tuples are very similar to lists, but with a few key differences. First, tuples are defined using parentheses instead of square brackets. \n\nExample: \n\nmyTuple=(“A”,”tuple”,”uses”,”parentheses”) \n\nThis example creates a tuple with the four values. However, the values inside of a tuple can not be amended or added to. Once the tuple is created, nothing inside it can be modified, and you cannot add or remove values. \nTuples can also contain multiple data types in one tuple. \n\nExample: \n\nmyTuple=(“A”,”1”,”uses”,”3.5”) \n\nThis example creates a tuple with two strings, an integer, and a floating point number. This is a valid tuple. \nLike lists, tuples are indexed, with the first item having a place of 0. Moreover, many of the same functions that work with lists work with tuples. For example, the len function also applies to tuples, returning the value of how many items are stored in the tuple. </string>
</resources>