<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="#113977"
    tools:context=".LessonList">

    <Button
        android:id="@+id/lesson8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson8"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lesson7"
        app:layout_constraintTop_toBottomOf="@+id/lesson6" />

    <Button
        android:id="@+id/lesson7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson7"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lesson8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson5" />

    <Button
        android:id="@+id/lesson6"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson6"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lesson5"
        app:layout_constraintTop_toBottomOf="@+id/lesson4" />

    <Button
        android:id="@+id/lesson1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson1"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson3"
        app:layout_constraintEnd_toStartOf="@+id/lesson2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_select" />

    <Button
        android:id="@+id/lesson4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson4"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lesson3"
        app:layout_constraintTop_toBottomOf="@+id/lesson2" />

    <Button
        android:id="@+id/lesson2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson2"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lesson1"
        app:layout_constraintTop_toBottomOf="@+id/lesson_select" />

    <Button
        android:id="@+id/lesson3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson3"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson5"
        app:layout_constraintEnd_toStartOf="@+id/lesson4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson1" />

    <Button
        android:id="@+id/lesson5"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/lesson5"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toTopOf="@+id/lesson7"
        app:layout_constraintEnd_toStartOf="@+id/lesson6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson3" />

    <TextView
        android:id="@+id/lesson_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#959507"
        android:gravity="center"
        android:text="@string/lessonSelect"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>