<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#113977"
    tools:context=".Score">


    <TextView
        android:id="@+id/bronze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#959507"
        android:text="@string/bronze"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/silver"
        app:layout_constraintEnd_toStartOf="@+id/bronze_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <ImageView
        android:id="@+id/bronze_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bronze"
        app:layout_constraintBottom_toBottomOf="@+id/bronze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bronze"
        app:layout_constraintTop_toTopOf="@+id/bronze"
        app:srcCompat="@mipmap/bronze" />

    <TextView
        android:id="@+id/score_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/scoreVal"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gold_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gold"
        app:layout_constraintBottom_toBottomOf="@+id/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gold"
        app:layout_constraintTop_toTopOf="@+id/gold"
        app:srcCompat="@mipmap/gold" />

    <TextView
        android:id="@+id/gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#959507"
        android:text="@string/gold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toStartOf="@+id/gold_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/silver" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/score"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/score_val"
        app:layout_constraintEnd_toStartOf="@+id/score_val" />

    <Button
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="back"
        android:text="@string/back"
        app:backgroundTint="#959507"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/silver_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/silver"
        app:layout_constraintBottom_toBottomOf="@+id/silver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/silver"
        app:layout_constraintTop_toTopOf="@+id/silver"
        app:srcCompat="@mipmap/silver" />

    <TextView
        android:id="@+id/silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#959507"
        android:text="@string/silver"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/gold"
        app:layout_constraintEnd_toStartOf="@+id/silver_img"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bronze" />

</androidx.constraintlayout.widget.ConstraintLayout>